# ChatVLA_public

./: .gitignore  CLAUDE.md  README.md  check_traffic.py  pyproject.toml  save_mlp_weights_for_init_moe.py  save_mlp_weights_for_init_vision_moe.py  test_inference.py  test_nccv.py  test_qwen.py  train_vla.py
aloha_scripts/: bgr_to_rgb.py  check_h5file.py  constants.py
checkpoints/: config.pkl  dataset_stats.pkl
data_utils/: data_collator.py  dataset.py  libero_dataset.py  postprocess_episodes.py  rlds_to_h5py.py  utils.py  visualize_episodes.py
evaluate/: aloha_quest3_eval.py  evaluate_libero.py  evaluate_vqa.sh  qwen2_vla_test_action_remote.py  qwen2_vla_vl_data_new.py  raw_state.npy  replay_traj.py  save_head_params.py
policy_heads/: __init__.py  pyproject.toml
qwen2_vla/: model_load_utils.py
scripts/: 30843_after_warmup.sh  30843_deepseek_moe.sh  30843_moe_static_4to2.sh  30843_warmup_freeze.sh  30846_moe_chatvla.sh  30846_moe_static_1share.sh  30846_moe_static_2to1.sh  30846_nomoe_s2.sh  30846_warmup.sh  31757_nomoe_single_view.sh  31757_warmup.sh  31838_moe_6to3.sh  31838_moe_crossattn_2to1.sh  32410_deepspeed_moe_static_2to1.sh  32410_moe_6to3.sh  32410_warmup.sh  eval_chatvla_libero.sh  finetune_divla.sh  finetune_math.sh  finetune_moe_stage_1_all_robot.sh  finetune_moe_stage_2_mix_robot_vl_small_lr.sh  finetune_moe_stage_2_vl3_robot1.sh  finetune_tinyvla.sh  hostfile  just_test.sh  local_debug.sh  mt_train.sh  pretrain.sh  train_chatvla.sh  train_chatvla_libero.sh  train_chatvla_libero.slurm  train_chatvla_libero_debug.sh  train_chatvla_stage_1.sh  (+5 more)
(+51 files in other folders)
