[project]
name = "chatvla"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    # HuggingFace stack
    "transformers>=4.40.0",
    "accelerate",
    "peft",
    # Data + vision
    "h5py",
    "einops",
    "opencv-python>=4.7.0",
    "Pillow",
    "matplotlib",
    # Robot / sim (required for eval, optional for training-only)
    "mujoco",
    "pyquaternion==0.9.9",
    # Misc
    "pyyaml>=6.0",
    "pexpect>=4.8.0",
    "packaging>=23.0",
    "ipython>=8.12.0",
    "gitpython",
    "setuptools",
    "policy-heads",
    "qwen-vl-utils>=0.0.14",
    "timm>=1.0.27",
    "torchvision>=0.27.0",
    "torch>=2.12.0",
    "nvidia-cudnn-cu13>=9.20.0.48",
    "deepspeed>=0.19.1",
    "diffusers>=0.37.1",
    "lerobot[dataset,libero]",
    "wandb[media]>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.workspace]
members = [
    "policy_heads",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"

[tool.uv.sources]
policy-heads = { workspace = true, editable = true }
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }
lerobot = { path = "../lerobot", editable = true }

[build-system]  
requires = ["setuptools>=68"]  
build-backend = "setuptools.build_meta"


[tool.uv.extra-build-dependencies]
flash-attn = ["torch", "numpy"]
deepspeed = ["torch", "numpy"]
